--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "just for fun",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,5 +19,14 @@
   "bugs": {
     "url": "https://github.com/Napster2709/discord-bot/issues"
   },
-  "homepage": "https://github.com/Napster2709/discord-bot#readme"
+  "homepage": "https://github.com/Napster2709/discord-bot#readme",
+  "devDependencies": {
+    "@types/node": "^14.14.8",
+    "eslint": "^7.13.0",
+    "eslint-plugin-import": "^2.22.1",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.6",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.5"
+  }
 }
