--- a/package.json
+++ b/package.json
@@ -22,11 +22,17 @@
   "homepage": "https://github.com/Napster2709/discord-bot#readme",
   "devDependencies": {
     "@types/node": "^14.14.8",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
+    "discord.js": "^12.4.1",
     "eslint": "^7.13.0",
     "eslint-plugin-import": "^2.22.1",
     "express": "^4.17.1",
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
+  },
+  "dependencies": {
+    "dotenv": "^8.2.0"
   }
 }
